--- a/relationship-example/src/main/resources/application.properties
+++ b/relationship-example/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/consolah2
+
+
+#spring.jackson.serialization.fail-on-empty-beans=false
